--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -4,19 +4,17 @@ services:
         image: "mysql:8.0"
         container_name: "gestione-pianificazione-db"
         ports:
-            - "5432:3306"
+            - "3306:3306"
         environment:
             MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: quarkus
-            GOSU_VERSION: 1.14
-            PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-            MYSQL_MAJOR: 8.0
+            MYSQL_ROOT_USERNAME: root
+            MYSQL_DATABASE: gestionepianificazione
 
     keycloak:
-        image: "quay.io/keycloak/keycloak:18.0.2"
-        container_name: "keycloak"
+        image: quay.io/keycloak/keycloak:17.0.0
+        container_name: keycloak
         ports:
-            - "8081:8080"
+            - '8082:8080'
         environment:
             KEYCLOAK_ADMIN_PASSWORD: admin
             KEYCLOAK_ADMIN: admin
