--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=
 #%prod.quarkus.oidc.auth-server-url=http://localhost:51383
 quarkus.devservices.enabled=false
 #DB connection
@@ -16,7 +16,7 @@ quarkus.log.category."com.jsb".level=DEBUG
 quarkus.log.file.enable=true
 #CORS
 quarkus.http.cors=true
-quarkus.http.cors.methods=GET,POST,OPTIONS
+quarkus.http.cors.methods=GET,POST,OPTIONS,PUT,DELETE
 # Configuration file
 quarkus.oidc.auth-server-url=https://localhost:8082/realms/quarkus
 quarkus.oidc.client-id=backend-service
