--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 quarkus.http.port=8081
+quarkus.devservices.enabled=false
+quarkus.live-reload.instrumentation=true
 #CORS
 quarkus.http.cors=true
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+#DOCKER
+#quarkus.container-image.build=true
+#quarkus.container-image.group=gestione-pianificazione
+#quarkus.container-image.name=jwt
+
+quarkus.hibernate-orm.database.generation=update
 
 #DB connection
 quarkus.datasource.db-kind=mysql
@@ -13,16 +20,19 @@ quarkus.datasource.password=root
 quarkus.datasource.jdbc.url=jdbc:mysql://172.17.0.2:3306/authentication
 # Send output to a log file
 %dev.quarkus.log.file.path=/Users/pconvertini/IdeaProjects/logs/gestione-pianificazione/auth-service.log
-quarkus.log.file.path=/deployments/quarkus//logs/biomedicals-api/auth-service.log
+quarkus.log.file.path=/deployments/quarkus//logs/gestione-pianificazione/auth-service.log
 quarkus.log.file.level=DEBUG
 quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.category."com.jsb.gestionepianificazione".level=DEBUG
 quarkus.log.file.enable=true
 #JWT
 # Private signing key
-smallrye.jwt.sign.key.location=privatekey.pem
-# Public verification key
-quarkus.native.resources.includes=publickey.pem
-mp.jwt.verify.publickey.location=publickey.pem
-# Required issuer
-mp.jwt.verify.issuer=https://www.jsb.com/issuer
+smallrye.jwt.sign.key.location=../jwt/privateKey.pem
+mp.jwt.verify.issuer=authentication-service
+smallrye.jwt.new-token.issuer=authentication-service
+mp.jwt.verify.publickey.location=../jwt/publicKey.pem
+smallrye.jwt.new-token.lifespan=3600
+
+#CRYPTO PASSWORD SERVICE
+crypto.key=PdSgVkYp3s6v9y/B
+crypto.padding=AES/ECB/PKCS5Padding
