--- a/gp-api-service/src/main/resources/application.properties
+++ b/gp-api-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-#quarkus.hibernate-orm.database.generation=drop-and-create
-#%prod.quarkus.oidc.auth-server-url=http://localhost:51383
 quarkus.devservices.enabled=false
+quarkus.live-reload.instrumentation=true
+quarkus.hibernate-orm.database.generation=update
+#JWT
+mp.jwt.verify.issuer=authentication-service
+mp.jwt.verify.publickey.location=../jwt/publicKey.pem
 #DB connection
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
@@ -17,3 +20,7 @@ quarkus.log.file.enable=true
 #CORS
 quarkus.http.cors=true
 quarkus.http.cors.methods=GET,POST,OPTIONS,PUT,DELETE
+#DOCKER
+#quarkus.container-image.build=true
+#quarkus.container-image.group=gestione-pianificazione
+#quarkus.container-image.name=api
